zero-trust-gitops-platform/policies/tests/disallow-default-namespace/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-default-namespace-test
policies:
  - ../../governance/disallow-default-namespace.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: disallow-default-namespace
    rule: check-not-default-namespace
    resources:
      - compliant-pod
    kind: Pod
    result: pass
  - policy: disallow-default-namespace
    rule: check-not-default-namespace
    resources:
      - noncompliant-pod
    kind: Pod
    result: fail
